new implementation of the selection ansi menu. supports multiple table states with right/left cursor moving between states and up/down cursor moving amongst the rows of data in the currently select state. very nice.